--- a/cardpage.css
+++ b/cardpage.css
@@ -1,3 +1,7 @@
+body{
+    background-color: ghostwhite;
+}
+
 ul {
    padding: 20px;
        
@@ -12,3 +16,17 @@ ul {
     height: 100%;
 
 }
+
+.nav {
+    background-color: tomato;
+}
+.nav-item{
+    background-color: ghostwhite;   
+    list-style-type: none;  
+    margin-right: 10px;
+}
+
+
+
+
+
